fixed newinstance depreciated issue with getconstructor